# deep-research

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.sh
deep_research/: __init__.py  config.py  context.py  graph.py  llm.py  prompts_shared.py  state.py
grounding_scripts/: bedrock-guardrails.py  minicheck.py  nemo-guardrails.py  urlhealth.py
prompts/: fallback.md  phase0-clarify.md  phase1a-search.md  phase1b-verify.md  phase2-integrate.md  phase3-report.md  ref-challenge-checklist.md  ref-citation-embedding.md  ref-cli-tools.md  ref-focused-execution.md  ref-multilingual.md  source-criteria.md
scripts/: archive_workspaces.sh  pytest_baseline.sh  setup.sh
tests/: conftest.py  test_arxiv_retriever.py  test_bedrock_flow.py  test_benchmarks.py  test_brief_entities.py  test_budget_guard.py  test_claim_dedup.py  test_claim_relevance.py  test_clarify_staged.py  test_cost_tracker.py  test_coverage_chk_sync.py  test_coverage_sanity.py  test_discovery_queries.py  test_duplicate_query_rollback.py  test_evidence_inline.py  test_fallback_loop.py  test_github_search.py  test_goal_aware_extraction.py  test_grounding_concurrency.py  test_grounding_coverage_assertion.py  test_heavy_mode.py  test_iterative_expansion.py  test_march_blind_recheck.py  test_metadata_filter.py  test_off_topic_gap.py  test_paper_seed_queries.py  test_phase0_url_validation.py  test_phase2_review.py  test_phase2_section_writeback.py  test_phase3_llm_sanity_check.py  test_phase3_statement_ledger_resilient.py  test_planner_reflection.py  test_review_gate.py  (+22 more)
(+29 files in other folders)
