[project]
name = "deep-research"
version = "0.1.0"
description = "LangGraph-based deep research workflow"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1",
    "langgraph-prebuilt>=1.0",
    "langchain-anthropic>=0.4",
    "langchain-openai>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-core>=1.2",
    "pydantic>=2.10",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
deep-research = "deep_research.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# Strict mode: only tests marked with @pytest.mark.asyncio use the asyncio
# plugin. Lets existing `asyncio.run()`-style sync tests keep working untouched.
asyncio_mode = "strict"
